--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -4,6 +4,10 @@ authors = []
 description = ""
 telemetry = false
 requirements = []
+[contracts.eco-points]
+path = "contracts/eco-points.clar"
+depends_on = []
+
 [contracts.eco-registry]
 path = "contracts/eco-registry.clar"
 depends_on = []
